<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".device.play.LiveDetailPlayerFragment">

    <include layout="@layout/top_action_bar"
        android:id="@+id/action_bar_back"/>

    <TextView
        android:id="@+id/live_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:text="播放"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_player" />

    <com.ly.wvp.device.play.LiveVideoPlayer
        android:id="@+id/detail_player"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_back"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/ptz_ctr_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_player"
        android:contentDescription="@string/ptz_move_control"/>

    <ImageButton
        android:id="@+id/ptz_btn_up"
        android:layout_width="56dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ptz_btn_up_bg"
        android:contentDescription="@string/ptz_up"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/ptz_btn_left"
        android:layout_width="42dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/ptz_btn_lft_bg"
        android:contentDescription="@string/ptz_left"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/ptz_btn_right"
        android:layout_width="42dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ptz_btn_right_bg"
        android:contentDescription="@string/ptz_right"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/ptz_btn_down"
        android:layout_width="56dp"
        android:layout_height="42dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ptz_btn_down_bg"
        android:contentDescription="@string/ptz_down"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/ptz_move_control"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <Button
        android:id="@+id/cloud_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_cloud_record"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/live_info" />


</androidx.constraintlayout.widget.ConstraintLayout>