<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navi_bottom"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/nav_bottom_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tab_device,tab_settings,tab_multi_device_play" />

    <Button
        android:id="@+id/tab_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bottom_bg"
        android:text="@string/tab_devices"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tab_multi_device_play"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tab_record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bottom_bg"
        android:text="@string/tab_record"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tab_multi_device_play"
        app:layout_constraintEnd_toStartOf="@+id/tab_settings"
        app:layout_constraintStart_toEndOf="@+id/tab_multi_device_play"
        app:layout_constraintTop_toTopOf="@+id/tab_multi_device_play" />

    <Button
        android:id="@+id/tab_multi_device_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bottom_bg"
        android:text="@string/tab_multi_device_play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tab_device"
        app:layout_constraintEnd_toStartOf="@+id/tab_record"
        app:layout_constraintStart_toEndOf="@+id/tab_device"
        app:layout_constraintTop_toTopOf="@+id/tab_device" />

    <Button
        android:id="@+id/tab_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bottom_bg"
        android:text="@string/tab_settings"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tab_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tab_record"
        app:layout_constraintTop_toTopOf="@+id/tab_record" />

</merge>